--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 
-    <script type="text/javascript" src="ex1.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
