add fill confetti

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <h1>Tic-Tac-Toe</h1>
             <h3>Welcome to My Game!</h3>
             <div id="time" class="time"></div>
+            <div id="win" class="win"></div>
         </div>
 
         <div class="game">
@@ -51,6 +52,7 @@
     </div>
 
     <script type="text/javascript" src="script.js"></script>
+    <script src="confetti.js"></script>
 </body>
 
 </html>
